--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -10,31 +10,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Fetch BTC price and update data.json
-      run: |
-        BTC_PRICE=$(curl -s https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd | jq '.bitcoin.usd')
-        echo "[
-  {
-    \"x\": \"$(date +%Y-%m-%d)\",
-    \"y\": $BTC_PRICE,
-    \"levels\": {
-      \"Buy!\": 18000,
-      \"Accumulate\": 23000,
-      \"Fair\": 34000,
-      \"FOMO\": 45000,
-      \"Bubble\": 60000,
-      \"Maximum Bubble Territory\": 80000
-    }
-  }
-]" > data.json
+      - name: Fetch BTC price and update data.json
+        run: |
+          BTC_PRICE=$(curl -s https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd | jq '.bitcoin.usd')
+          echo "[" > data.json
+          echo "  {" >> data.json
+          echo "    \"x\": \"$(date +%Y-%m-%d)\"," >> data.json
+          echo "    \"y\": $BTC_PRICE," >> data.json
+          echo "    \"levels\": {" >> data.json
+          echo "      \"Buy!\": 18000," >> data.json
+          echo "      \"Accumulate\": 23000," >> data.json
+          echo "      \"Fair\": 34000," >> data.json
+          echo "      \"FOMO\": 45000," >> data.json
+          echo "      \"Bubble\": 60000," >> data.json
+          echo "      \"Maximum Bubble Territory\": 80000" >> data.json
+          echo "    }" >> data.json
+          echo "  }" >> data.json
+          echo "]" >> data.json
 
-    - name: Commit and push changes
-      run: |
-        git config user.name "github-actions"
-        git config user.email "actions@github.com"
-        git add data.json
-        git commit -m "Update BTC price" || echo "No changes to commit"
-        git push
+      - name: Commit and push changes
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add data.json
+          git commit -m "Update BTC price" || echo "No changes to commit"
+          git push
